--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,8 @@ buildscript {
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+        //implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.1'
+
     }
 }
 
